#  Edit the following fields to match your project

[project]
name = "comfyui-pad-to-eight"
description = "A custom ComfyUI node that pads an image to a multiple of 8 width."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/your-username/comfyui-pad-to-eight"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "your-username"
DisplayName = "ComfyUI Pad To Eight"
Icon = ""
